--- a/board_project/board_main/templates/author/author_detail.html
+++ b/board_project/board_main/templates/author/author_detail.html
@@ -1,17 +1,23 @@
 {% extends 'home.html' %} <!--상속을 받는다.-->
 
 {% block content %}
-<h1>회원 상세조회</h1>
-<fieldset>
-    <p>이름 : {{author.name}} </p>
-    <p>이메일 : {{author.email}}</p>
-    <p>비밀번호 : {{author.password}} </p>
-    <span>가입일 : {{author.created_at}}</span>&nbsp;&nbsp;&nbsp;&nbsp;
-    <span>회원정보수정일 : {{author.updated_at}} </span>
-    <br>
-    <br>
-</fieldset>
-<div>
-    <button><a href="/author/{{author.id}}/update" style="text-decoration:none"> 회원정보수정</a></button>
+
+<div class="row">
+    <div>
+        <h1>회원 상세조회</h1>
+        <p><b>이름</b> : {{author.name}} </p>
+        <p><b>이메일</b> : {{author.email}}</p>
+        <p><b>비밀번호</b> : {{author.password}} </p>
+        <p><b>작성글수</b> : {{author.posts.count}} </p>
+        <div>
+            <hr>
+            <span><b>가입일</b> : {{author.created_at}}</span>&nbsp;&nbsp;&nbsp;&nbsp;
+            <span><b>회원정보수정일 </b>: {{author.updated_at}} </span>
+        </div>
+    </div>
+    <div>
+        <a href="/author/{{author.id}}/update" style="text-decoration:none" class="btn btn-primary"> 회원정보수정</a>
+        <a href="/authors" style="text-decoration:none" class="btn btn-secondary">회원목록</a>
+    </div>
 </div>
 {% endblock %}
