--- a/board_project/board_main/templates/author/author_new.html
+++ b/board_project/board_main/templates/author/author_new.html
@@ -1,17 +1,18 @@
-{% extends 'home.html' %} 
+{% extends 'home.html' %}
 {% block content %}
-    <form autocapitalize="on" method="POST">
-        {% csrf_token %}
-        <fieldset> 
-            <legend>회원 가입</legend>
-            <ul>
-                이 름 : <input type="text" name="user_name" id="input_name"> <br>
-                이메일 : <input type="email" name="user_email" id="input_email"> <br>
-                패스워드 : <input type="password" name="user_password" maxlength="8" id=input_password><br>
-            </ul>
-        </fieldset>
-        <br>
-        <input type="submit" value="회원가입">
-        <input type="reset" value="취소">
-    </form>    
+<form autocapitalize="on" method="POST">
+    {% csrf_token %}
+    <h1>회원 가입</h1>
+    <ul>
+        <div class="form-group">이 름 <input type="text" class='form-control' name="user_name" id="input_name">
+        </div>
+        <div class="form-group">이메일 <input type="email" class='form-control' name="user_email" id="input_email">
+        </div>
+        <div class="form-group">비밀번호 <input type="password" class='form-control' name="user_password" maxlength="8" id=input_password>
+        </div>
+    </ul>
+    <input type="submit" value="회원가입" class="btn btn-primary">
+    <input type="reset" value="취소" class="btn btn-secondary">
+    <a href="/authors" style="text-decoration:none" class="btn btn-secondary">회원목록</a>
+</form>
 {% endblock %}
