--- a/board_project/board_main/templates/author/author_update.html
+++ b/board_project/board_main/templates/author/author_update.html
@@ -1,17 +1,20 @@
-{% extends 'home.html' %} 
+{% extends 'home.html' %}
 {% block content %}
-    <form autocapitalize="on" method="POST">
-        {% csrf_token %}
-        <fieldset> 
-            <legend>회원정보수정</legend>
-            <ul>
-                이 름 : <input type="text" name="user_name" value="{{author.name}}"> <br>
-                이메일 : <input type="email" name="user_email" value=" {{author.email}}"> <br>
-                패스워드 : <input type="password" name="user_password" value="{{author.password}}"   maxlength="8" id=input_password><br>
-            </ul>
-        </fieldset>
-        <br>
-        <input type="submit" value="수정">
-        <input type="reset" value="취소">
-    </form>    
+<form autocapitalize="on" method="POST">
+    {% csrf_token %}
+    <h1>회원 정보 수정</h1>
+    <ul>
+        <div class="form-group">이 름 : <input type="text" class='form-control' name="user_name" value="{{author.name}}">
+        </div>
+        <div class="form-group">이메일 : <input type="email" class='form-control' name="user_email"
+                value=" {{author.email}}"></div>
+        <div class="form-group">패스워드 : <input type="password" class='form-control' name="user_password"
+                value="{{author.password}}" maxlength="8" id=input_password>
+    </ul>
+    <div>
+        <input type="submit" value="수정" class="btn btn-primary">
+        <input type="reset" value="reset" class="btn btn-secondary">
+        <a href="/author/{{author.id}}" style="text-decoration:none" class="btn btn-secondary">취소</a>
+    </div>
+</form>
 {% endblock %}
